--- a/src/styles/Chat.module.css
+++ b/src/styles/Chat.module.css
@@ -8,7 +8,7 @@
 
 .inputForm {
     position: relative;
-    top: 100px
+    top: 20px
 
 }
 
@@ -17,7 +17,7 @@
 }
 
 .textInput {
-    width: 50%;
+    width: 65%;
 }
 
 .message {
@@ -31,7 +31,9 @@
     border: 1px solid rgba(0, 0, 0, 0.295);
     border-radius: 5px;
     text-align: left;
-
+    height: 500px;
+    overflow-y: scroll;
 }
+
 
 
