--- a/src/styles/Chat.module.css
+++ b/src/styles/Chat.module.css
@@ -8,16 +8,20 @@
 
 .inputForm {
     position: relative;
-    top: 20px
-
+    margin: auto;
+    top: 20px;
+    width: 80%;
 }
 
 .nameInput {
     width: 100px;
+    padding: 5px 5px 5px 5px;
+    margin: 5px 5px 5px 5px;
 }
 
 .textInput {
-    width: 65%;
+    width: 70%;
+    padding: 5px 5px 5px 5px;
 }
 
 .message {
@@ -34,6 +38,41 @@
     height: 500px;
     overflow-y: scroll;
 }
+
+button {
+    background-color: rgba(248, 248, 255, 0);
+    padding: 5px 5px 5px 5px;
+    margin: 5px 5px 5px 5px;
+    border: 2px solid rgba(0, 0, 0, 0.171);
+    width: 100px;
+    
+}
+
+button:hover {
+    background-color: rgba(189, 189, 255, 0.575);
+    border: 2px solid gray;
+    
+}
+
+.premium {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+.buyInput {
+    display: block;
+    width: 250px;
+}
+
+.adminPanel {
+    display: block;
+    position: fixed;
+    bottom: 100px;
+    right: 20px;
+}
+
+
 
 
 
